# AfyaBuddy

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: pyproject.toml
frontend/: .gitignore
frontend/src/: App.jsx  ErrorBoundary.jsx
frontend/src/api/: first-aid-steps.js  google-translate.js  openai-medical.js
frontend/src/components/ui/: alert.jsx  badge.jsx  button.jsx  tabs.jsx
frontend/src/lib/: ai-services.js  crew-services.js  crew-tasks.js  utils.js
frontend/src/styles/: output.css
my-app/: .gitignore
my-app/afyabuddy/src/afyabuddy/: api.py  api_server.py  crew.py
my-app/my-app/: package.json  server.js
my-app/my-app/afyabuddy/: README.md
my-app/my-app/afyabuddy/src/afyabuddy/: crew.py
my-app/my-app/my-app/afyabuddy/src/afyabuddy/: crew.py
my-app/my-app/my-app/my-app/: package-lock.json  tailwind.config.js
my-app/my-app/my-app/my-app/src/components/ui/: avatar.jsx  progress.jsx  switch.jsx
my-app/my-app/my-app/src/: App.jsx  main.jsx
my-app/my-app/src/: App.jsx
my-app/src/api/: google-places.js
my-app/src/components/ui/: input.jsx  separator.jsx
src/: App.jsx  config.py
src/afyabuddy/: api_server.py
src/components/ui/: card.jsx
src/lib/: crew-agents.js
